Destiny Norte - Mobile

--- a/destiny4.0/Norte/ilimitada_avanzada_600/resources/templates/index.hbs
+++ b/destiny4.0/Norte/ilimitada_avanzada_600/resources/templates/index.hbs
@@ -53,88 +53,7 @@ utag_data.plans_add2cart = [
     <div class="ws10-o-layout">
       <div class="ws10-o-layout__item ws10-u--2/3@desktop ws10-u--3/5@tablet">
         <!-- MÓVIL -->
-        <section class="vf-mobile ws10-u--pt12x">
-          <p class="ws10-u-heading--4 ws10-u--mb2x ws10-u-heading--4-lt">Móvil</p>
-          <p class="ws10-u-heading--3"><strong>Datos ilimitados para que no te
-              pierdas nada</strong></p>
-          <div class="vf-mobile__animation">
-            <div class="vf-mobile__apps ws10-u--mt+">
-            </div>
-            <picture>
-              <source class="vf-mobile__animation--img" srcset="img/section-mobile/mobile-apps.webp"
-                type="image/webp" />
-              <source class="vf-mobile__animation--img" srcset="img/section-mobile/mobile-apps.webp" type="image/png" />
-              <img class="vf-mobile__animation--img" src="img/section-mobile/mobile-apps.webp"
-                alt="Algunas de las aplicaciones que podrás usar con tu móvil si tienes Vodafone One Ilimitada" />
-            </picture>
-          </div>
-          <div class="vf-mobile__details ws10-flex ws10-flex__wrap">
-            <div class="ws10-c-product-detail ws10-u--mt2x ws10-u--mb2x ws10-u--pr3x ws10-u--1/2@desktop">
-              <svg class="ws10-c-product-detail__icon" xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px">
-                <title>Icono Rayos</title>
-                <use class="icon-v3" xlink:href="#icon-thunder-2grey"></use>
-              </svg>
-              <p class="ws10-c-product-detail__text">Datos ilimitados
-                <strong> a alta velocidad (10Mbps de bajada y de subida).</strong>
-              </p>
-            </div>
-            <div class="ws10-c-product-detail ws10-u--mt2x ws10-u--mb2x ws10-u--pr3x ws10-u--1/2@desktop">
-              <img class="ws10-c-product-detail__icon" src="img/section-mobile/music_and_movies.svg"
-                alt="icono music&movies" style="padding: 0.8rem;" />
-              <p class="ws10-c-product-detail__text">Disfruta de música sin
-                límites con una calidad extrema y sin cortes.</p>
-            </div>
-            <div class="ws10-c-product-detail ws10-u--mt2x ws10-u--mb2x ws10-u--pr3x ws10-u--1/2@desktop">
-              <img class="ws10-c-product-detail__icon" src="img/section-mobile/video.svg" alt="icono video"
-                style="padding: 0.8rem;" />
-              <p class="ws10-c-product-detail__text">
-                Consume vídeo en streaming en calidad 4K sin cortes ni
-                interrupciones.</p>
-            </div>
-            <div class="ws10-c-product-detail ws10-u--mt2x ws10-u--mb2x ws10-u--pr3x ws10-u--1/2@desktop">
-              <svg class="ws10-c-product-detail__icon" xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px">
-                <title>Icono Play</title>
-                <use class="icon-v3" xlink:href="#icon-play-mid"></use>
-              </svg>
-              <p class="ws10-c-product-detail__text">
-                Disfruta de streaming sin necesidad de conectarte al WiFi, tú y
-                tus datos.</p>
-            </div>
-            <div class="ws10-c-product-detail ws10-u--mt2x ws10-u--mb2x ws10-u--pr3x ws10-u--1/2@desktop">
-              <svg class="ws10-c-product-detail__icon" xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px">
-                <title>Icono llamadas</title>
-                <use class="icon-v3" xlink:href="#icon-unified-communication-mid"></use>
-              </svg>
-              <p class="ws10-c-product-detail__text">
-                <strong>Llamadas y SMS ilimitados</strong>
-                con cualquier operador nacional las 24 horas, establecimiento
-                incluido.
-              </p>
-            </div>
-            <div class="ws10-c-product-detail ws10-u--mt2x ws10-u--mb2x ws10-u--pr3x ws10-u--1/2@desktop">
-
-              <img class="ws10-c-product-detail__icon" src="img/section-mobile/roaming.svg" alt="icono roaming"
-                style="padding: 0.8rem;" />
-              <p class="ws10-c-product-detail__text">
-                <strong>Roaming incluido en Unión Europea, Reino Unido y EEUU.</strong>
-                Disfruta con las mismas condiciones de tu tarifa, sin
-                preocupaciones también en EEUU.
-              </p>
-            </div>
-            <div class="ws10-c-product-detail ws10-u--mt2x ws10-u--mb2x ws10-u--pr3x ws10-u--1/2@desktop">
-              <svg class="ws10-c-product-detail__icon" xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px">
-                <title>titulo</title>
-                <use class="icon-v3" xlink:href="#icon-5G_esp-mid"></use>
-              </svg>
-              <p class="ws10-c-product-detail__text">
-                Todo con la nueva red 5G.</p>
-            </div>
-          </div>
-        </section>
+        {{>mobile }}
         <!-- SEGUNDA LÍNEA GRATIS -->
         <section class="vf-mobile ws10-u--pt12x" data-js-vf="_secondLine2">
           <p class="ws10-u-heading--3"><strong>Llévate la 2ª Línea GRATIS 1 año</strong></p>
