--- a/destiny4.0/one/ilimitada-avanzada-300/resources/templates/partials/secondline.hbs
+++ b/destiny4.0/one/ilimitada-avanzada-300/resources/templates/partials/secondline.hbs
@@ -4,7 +4,7 @@
   </h3>
   <ul class="vf-mobile__details ws10-flex ws10-flex__wrap">
     {{#each secondLine.productDetail}}
-  {{> productDetail params=this}}
+  {{> productDetail this}}
     {{/each}}
   </ul>
   <p class="ws10-u--pt4x wfms__legal">
