--- a/destiny4.0/one/ilimitada-avanzada-300/resources/templates/index.hbs
+++ b/destiny4.0/one/ilimitada-avanzada-300/resources/templates/index.hbs
@@ -26,7 +26,7 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada avanzada 3
                 <!-- FIBRA -->
                 {{> fibra }}
                 <!-- TAMBIÉN INCLUIDO -->
-
+                {{> alsoincluded }}
                 <!-- SIN SORPRESAS -->
                 {{> sinSorpresas }}
                 <!-- TIMELINE  -->
