Destiny Colectivos - detele final price

--- a/destiny4.0/colectivos/ilimitada_avanzada_300/resources/templates/partials/cardRate.hbs
+++ b/destiny4.0/colectivos/ilimitada_avanzada_300/resources/templates/partials/cardRate.hbs
@@ -63,9 +63,11 @@
                                         <p class="ws10-c-card-rate__dto ws10-c-card-rate__dto--label">
                                             {{ offers.label }}
                                         </p>
+                                        {{#if offers.finalPrice }}
                                         <p class="ws10-c-card-rate__dto ws10-c-card-rate__dto--price">
                                             {{{ offers.finalPrice }}}
                                         </p>
+                                        {{/if }}
                                         <p class="ws10-c-card-rate__price ws10-u-color--black">
                                             {{{ offers.discountPrice }}}
                                         </p>
