arreglado one 300, se ve bien

--- a/destiny4.0/one/ilimitada-avanzada-300/resources/templates/partials/tv.hbs
+++ b/destiny4.0/one/ilimitada-avanzada-300/resources/templates/partials/tv.hbs
@@ -32,7 +32,7 @@
   </p>
   <div class="ws10-c-logo-list ws10-c-logo-list--mini">
       <ul class="ws10-c-logo-list__list">
-        {{#each tv.logos.imgJpg}}
+        {{#each tv.logos.img}}
         <li class="ws10-c-logo-list__item">
           {{> picture this}}
         </li>
