--- a/destiny4.0/one/ilimitada-plus-600/resources/templates/partials/tv.hbs
+++ b/destiny4.0/one/ilimitada-plus-600/resources/templates/partials/tv.hbs
@@ -1,4 +1,6 @@
 <section class="vf-tv ws10-u--pt12x">
+  <b class="ws10-c-badge-text ws10-c-badge-text--turquoise ws10-u--mb4x ws10-u--mr1x vfms-badge3">Exclusivo de esta tarifa</b>
+
   <h3 class="ws10-flex ws10-flex__direction--column ws10-u--mb0">
     <span class="ws10-u-heading--4 ws10-u--mb0 ws10-u-heading--4-lt">
         {{ tv.section }}
