Destiny One - Fix PLP

--- a/destiny4.0/one/plp/resources/templates/partials/banner.hbs
+++ b/destiny4.0/one/plp/resources/templates/partials/banner.hbs
@@ -5,7 +5,7 @@
       <div class="ws10-o-layout__item ws10-u--1/2@desktop">
         <h2 class="ws10-u-heading--4">Fibra + Móvil</h2>
         <p
-          class="ws10-u-heading--1-lt ws10-flex ws10-flex__direction--column vfms-title-banner"
+          class="ws10-u-heading--1-lt ws10-flex ws10-flex__direction--column vfms-title-banner ws10-u--pr16x"
         >
           <span>{{{ banner.title }}}
           </span>
