--- a/jumanji/plp/resources/templates/partials/banner.hbs
+++ b/jumanji/plp/resources/templates/partials/banner.hbs
@@ -3,14 +3,9 @@
   <div class="vf-banner__container ws10-o-wrapper">
     <div class="ws10-o-layout ws10-u--pb0 ws10-u--pt6x">
       <div class="ws10-o-layout__item ws10-u--1/2@desktop">
-        <h2 class="ws10-u-heading--4">Fibra + Móvil</h2>
-        <p
-          class="ws10-u-heading--1-lt ws10-flex ws10-flex__direction--column vfms-title-banner"
-        >
-          <span>Llévate
-            <strong>2 líneas ilimitadas + fibra</strong>
-            con hasta
-            <strong> 30% dto. durante 1 año</strong></span>
+        <h2 class="ws10-u-heading--4">{{{ banner.title }}}</h2>
+        <p class="ws10-u-heading--1-lt ws10-flex ws10-flex__direction--column vfms-title-banner ws10-u--pr16x">
+          <span class="ws10-u--pr4x">{{{ banner.title2 }}}</span>
         </p>
       </div>
       <div class="ws10-o-layout__item ws10-u--1/2@desktop">
