plp euskaltel + plp masmovil

--- a/oferta/euskaltel/plp/resources/templates/index.hbs
+++ b/oferta/euskaltel/plp/resources/templates/index.hbs
@@ -8,7 +8,7 @@
 
     <div class="ws10-o-wrapper">
         <!-- Section RATES -->
-        {{> rates }}
+        {{> cardRates }}
         <!-- Section ADDONS -->
         {{!-- {{> addons }} --}}
         <!-- Sections Vodafone One -->
