--- a/oferta/masmovil/plp/resources/templates/partials/banner50.hbs
+++ b/oferta/masmovil/plp/resources/templates/partials/banner50.hbs
@@ -1,18 +1,10 @@
 <!-- Sections Banner 50 -->
 <section class="vf-banner50 ws10-o-layout ws10-flex__align-items--center ws10-flex__justify--between ws10-u--pb8x">
     <div class="vf-banner50__container1 ws10-o-layout__item ws10-u--1/2@desktop ws10-align--right">
-        <picture>
-            <source class="vf-banner50__img" srcset="img/section-vodafone-one/mama-hija.webp">
-            <source class="vf-banner50__img" srcset="img/section-vodafone-one/mama-hija.jpg">
-            <img class="vf-banner50__img" src="img/section-vodafone-one/mama-hija.webp" alt="Madre y niña interactúan con una Tablet">
-        </picture>
+          {{> picture banner50.img.[0]}}
     </div>
     <div class="vf-banner50__container2 ws10-o-layout__item ws10-u--1/2@desktop">
-        <h2 class="ws10-u-heading--4-lt">
-            Con <strong>Vodafone One</strong> tendrás acceso a las mejores <strong>ofertas de tarifas de fibra y móvil!</strong>
-        </h2>
-        <p>
-            Habla, navega o disfruta de vídeos en streaming sin ataduras y a la máxima velocidad con nuestras tarifas de <strong>datos ilimitados</strong>. Con la instalación de nuestro modem, gratuita y rápida, podrás conectar varios dispositivos al mismo tiempo. En Vodafone hemos incluído el <strong>5G en todas nuestras tarifas</strong> para que toda la familia pueda disfrutar del mejor entretenimiento con la máxima velocidad y estabilidad.
-        </p>
+        <h2 class="ws10-u-heading--4-lt">{{{banner50.title}}}</h2>
+        <p>{{{banner50.description}}}</p>
     </div>
 </section>
