Destiny Jumanji - PDP 1

--- a/jumanji/ilimitada-avanzada-300/resources/templates/index.hbs
+++ b/jumanji/ilimitada-avanzada-300/resources/templates/index.hbs
@@ -2,32 +2,30 @@
 <link href="css/styles.css" rel="stylesheet" data-ws10-microcss />
 <script>
 
-utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada avanzada 300mbps", "product_category": "movil+fibra", "product_variant": "datos y minutos ilimitados+300mbps fibra", "promotion_price_name": "promo jumanji_one avanzada 300mb", "promotion_gift_name": "decodificador", "product_id": "168446368", "product_detail": "", "product_sale_type": "yes:transactional", "product_additional_lines": [{ "product_name": "tarifa movil ilimitada esencial", "product_category": "movil", "product_variant": "datos ilimitados", "promotion_price_name": "2 x 1 ilimitada esencial gratis", "promotion_gift_name": "", "product_id": "268548230" }], "product_packs_tv": [{ "product_name": "pack universal", "product_category": "tv", "promotion_price_name": "universal gratis", "promotion_gift_name": "", "product_id":""}]},{"product_name": "vodafone one ilimitada avanzada 300mbps","product_category": "movil+fibra","product_variant": "datos y minutos ilimitados+300mbps fibra","promotion_price_name": "promo jumanji_one avanzada 300mb","promotion_gift_name": "decodificador","product_id": "168446368","product_detail": "","product_sale_type": "yes:transactional","product_packs_tv": [{"product_name": "pack universal","product_category": "tv","promotion_price_name": "universal gratis","promotion_gift_name": "","product_id": ""}]}]	
+utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada avanzada 300mbps", "product_category": "movil+fibra", "product_variant": "datos y minutos ilimitados+300mbps fibra", "promotion_price_name": "promo jumanji_one avanzada 300mb", "promotion_gift_name": "decodificador", "product_id": "168446368", "product_detail": "", "product_sale_type": "yes:transactional", "product_additional_lines": [{ "product_name": "tarifa movil ilimitada esencial", "product_category": "movil", "product_variant": "datos ilimitados", "promotion_price_name": "2 x 1 ilimitada esencial gratis", "promotion_gift_name": "", "product_id": "268548230" }], "product_packs_tv": [{ "product_name": "pack universal", "product_category": "tv", "promotion_price_name": "universal gratis", "promotion_gift_name": "", "product_id":""}]},{"product_name": "vodafone one ilimitada avanzada 300mbps","product_category": "movil+fibra","product_variant": "datos y minutos ilimitados+300mbps fibra","promotion_price_name": "promo jumanji_one avanzada 300mb","promotion_gift_name": "decodificador","product_id": "168446368","product_detail": "","product_sale_type": "yes:transactional","product_packs_tv": [{"product_name": "pack universal","product_category": "tv","promotion_price_name": "universal gratis","promotion_gift_name": "","product_id": ""}]}]
 </script>
 <div class="vfes-ms-content ws10-u-color--bg-light-grey" id="ilimitada" style="visibility: hidden;opacity: 0">
 
     <!-- BANNER & DIV TICKET QUE INYECTA WCS -->
-    {{> header-ticket }}
+    {{> headerTicket }}
     <!-- CONTENIDO EN 2/3 DE LA PÁGINA -->
     <div class="ws10-o-wrapper">
         <div class="ws10-o-layout">
             <div class="ws10-o-layout__item ws10-u--2/3@desktop ws10-u--3/5@tablet">
                 <!-- MÓVIL -->
-                {{> movil }}
+                {{> mobile }}
                 <!-- SEGUNDA LÍNEA GRATIS -->
-                {{> secondline }}
-
+                {{> secondLine }}
                 <!--TV-->
                 {{> tv }}
-
+                <!-- POPUP TV -->
+                {{> popupTv }}
                 <!--DECO-->
                 {{> deco }}
                 <!-- FIBRA -->
                 {{> fibra }}
                 <!-- TAMBIÉN INCLUIDO -->
-                {{> alsoincluded }}
-
-
+                {{> alsoIncluded }}
                 <!-- SIN SORPRESAS -->
                 {{> sinsorpresas }}
                 <!-- TIMELINE  -->
