Destiny - Fixes varios colectivos

--- a/destiny4.0/colectivos/ilimitada_plus_600/resources/templates/partials/tv.hbs
+++ b/destiny4.0/colectivos/ilimitada_plus_600/resources/templates/partials/tv.hbs
@@ -35,7 +35,7 @@
   <div class="ws10-c-logo-list ws10-c-logo-list--mini">
       <ul class="ws10-c-logo-list__list">
         {{#each tv.logos.img}}
-        <li class="ws10-c-logo-list__item">
+        <li class="ws10-c-logo-list__item@desktop">
           {{> picture this}}
         </li>
         {{/each}}
@@ -43,7 +43,7 @@
     <p class="ws10-c-logo-list__w-show-all">
       {{> cta tv.cta}}
 
-      
+
     </p>
     <span
       class="ws10-c-carousel__helperText"
