--- a/destiny4.0/colectivos/ilimitada_avanzada_300/resources/templates/partials/sticky-bottom.hbs
+++ b/destiny4.0/colectivos/ilimitada_avanzada_300/resources/templates/partials/sticky-bottom.hbs
@@ -8,26 +8,23 @@
         <div
           class="ws10-c-card-rate-sticky__offer ws10-flex ws10-flex__direction--column"
         >
-          <del class="ws10-c-card-rate-sticky__dto-price">54,99€/mes</del>
           <span class="ws10-c-card-rate-sticky__final-price">
-            <span
-              class="ws10-c-card-rate-sticky__final-price-value"
-            >28,49€</span>
+            <span class="ws10-c-card-rate-sticky__final-price-value">28,49€</span>
             <span class="ws10-c-card-rate-sticky__final-price-date">/mes</span>
           </span>
         </div>
         <a
-          data-cta="300:port:card"
+          data-cta="{{ cardRates.rates.0.cta.dataCTA }}"
           type="submit"
           class="ws10-c-button ws10-c-button--auto"
-          href="https://www.vodafone.es/c/tienda-online/particulares/contratacion?id={{ticket.offers.portability.cta.url}}&tcli=0&tta=2"
-          onmousedown="addtocart(utag_data.plans_add2cart[0])"
+          href="{{ cardRates.rates.0.cta.url }}"
+          onmousedown="{{ cardRates.rates.0.cta.onmousedown }}"
           data-analytics-element="stiky inferior"
-          data-analytics-context="{{ticket.offers.portability.cta.context}}"
-          data-analytics-category="{{ticket.offers.portability.cta.category}}"
-          data-analytics-id="{{ticket.offers.portability.cta.id}}"
+          data-analytics-context="{{ cardRates.rates.0.cta.context }}"
+          data-analytics-category="{{ cardRates.rates.0.cta.category }}"
+          data-analytics-id="{{ cardRates.rates.0.cta.id }}"
         >
-          {{ticket.offers.portability.cta.label}}
+          {{ cardRates.rates.0.cta.label }}
           <span class="ws10-u--hidden-visually" data-cta-a11y></span>
         </a>
       </div>
@@ -38,26 +35,23 @@
         <div
           class="ws10-c-card-rate-sticky__offer ws10-flex ws10-flex__direction--column"
         >
-          <del class="ws10-c-card-rate-sticky__dto-price">54,99€/mes</del>
           <span class="ws10-c-card-rate-sticky__final-price">
-            <span
-              class="ws10-c-card-rate-sticky__final-price-value"
-            >28,49€</span>
+            <span class="ws10-c-card-rate-sticky__final-price-value">28,49€</span>
             <span class="ws10-c-card-rate-sticky__final-price-date">/mes</span>
           </span>
         </div>
         <a
-          data-cta="300:port:card"
-          type="submit"
-          class="ws10-c-button ws10-c-button--auto"
-          href="https://www.vodafone.es/c/tienda-online/particulares/contratacion?id={{ticket.offers.newNumber.cta.url}}&tcli=0&tta=2"
-          onmousedown="addtocart(utag_data.plans_add2cart[1])"
-          data-analytics-element="stiky inferior"
-          data-analytics-context="{{ticket.offers.newNumber.cta.context}}"
-          data-analytics-category="{{ticket.offers.newNumber.cta.category}}"
-          data-analytics-id="{{ticket.offers.newNumber.cta.id}}"
+        data-cta="{{ cardRates.rates.1.cta.dataCTA }}"
+        type="submit"
+        class="ws10-c-button ws10-c-button--auto"
+        href="{{ cardRates.rates.1.cta.url }}"
+        onmousedown="{{ cardRates.rates.1.cta.onmousedown }}"
+        data-analytics-element="stiky inferior"
+        data-analytics-context="{{ cardRates.rates.1.cta.context }}"
+        data-analytics-category="{{ cardRates.rates.1.cta.category }}"
+        data-analytics-id="{{ cardRates.rates.1.cta.id }}"
         >
-          {{ticket.offers.newNumber.cta.label}}
+          {{ cardRates.rates.1.cta.label }}
           <span class="ws10-u--hidden-visually" data-cta-a11y></span>
         </a>
       </div>
