--- a/destiny4.0/colectivos/ilimitada_avanzada_300/resources/templates/partials/tv.hbs
+++ b/destiny4.0/colectivos/ilimitada_avanzada_300/resources/templates/partials/tv.hbs
@@ -33,7 +33,7 @@
   <div class="ws10-c-logo-list ws10-c-logo-list--mini">
       <ul class="ws10-c-logo-list__list">
         {{#each tv.logos.img}}
-        <li class="ws10-c-logo-list__item">
+        <li class="ws10-c-logo-list__item@desktop">
           {{> picture this}}
         </li>
         {{/each}}
