subida tarifa 2 masmovil

--- a/oferta/masmovil/tarifa-2/resources/styles/_micro.scss
+++ b/oferta/masmovil/tarifa-2/resources/styles/_micro.scss
@@ -67,7 +67,6 @@
     }
 
   }
-
   // clase genérica arreglo radio buttons
 
   .ws10-c-form__radio:checked+.ws10-c-form__label::after {
@@ -76,6 +75,7 @@
   
   .wfms__legal{
     font-size: 14px;
+    color: #666666;
   }
   .vfms-link{
     color:#E60000;
