--- a/oferta/masmovil/tarifa-2/resources/templates/partials/alsoIncluded.hbs
+++ b/oferta/masmovil/tarifa-2/resources/templates/partials/alsoIncluded.hbs
@@ -1,5 +1,5 @@
 <section class="ws10-u--pt12x">
-    <h3 class="ws10-u-heading--3"><strong>También incluido en Vodafone One ilimitada 600Mbps</strong></h3>
+    <h3 class="ws10-u-heading--3"><strong>También incluido en Vodafone One ilimitada Avanzada 600Mbps</strong></h3>
     <div class='ws10-c-carousel ws10-c-carousel--secondary ws10-c-carousel--secondary-left ws10-u--pl0' data-ws10-js='carousel'
             data-config='{"responsive":{"0":{"breakpoint":0,"elements":1},"1":{"breakpoint":640,"elements":2},"2":{"breakpoint":970,"elements":3}},"build":{"arrows":true,"bullets":true,"clickable_bullets":true}}'>
         <ul class='ws10-c-carousel__list js-carousel-list' id="idUl" aria-labelledby="idList">
@@ -40,6 +40,6 @@
                 </div>
             </li>
         </ul>
-        <span class="ws10-c-carousel__helperText" id="idList" style="left: 0;">(*)Todos los servicios podrás gestionarlos en la App Mi Vodafone</span>
+        <span class="ws10-c-carousel__helperText" id="idList" style="left: 0;">(*) Todos los servicios podrás gestionarlos en la app de Mi Vodafone</span>
     </div>
 </section>
