--- a/oferta/masmovil/tarifa-2/resources/templates/partials/banner.hbs
+++ b/oferta/masmovil/tarifa-2/resources/templates/partials/banner.hbs
@@ -3,7 +3,7 @@
         <div class="ws10-o-layout">
             <div class="vf-banner__textcontainer ws10-o-layout__item ws10-u--2/3@desktop ws10-u--3/5@tablet">
                 <span class="ws10-u-heading--4">Fibra + Móvil <strong>40% dto. 1 año</strong></span>
-                <h2 class="ws10-u--pt5x ws10-u-heading--2-lt ws10-u--3/4@desktop"><strong>Todo lo que necesitas</strong> para estar <strong>conectado fuera y dentro</strong> de casa </h2>
+                <h2 class="ws10-u--pt5x ws10-u--3/4@desktop">Fibra y dos líneas datos<br> para ser ilimitable</h2>
                 <span class="ws10-u-color--primary ws10-flex ws10-flex__align-items--center"><img class="ws10-u--pr1x" alt="icono mejor precio Vodafone" src="img/banner/icono-bestprice.svg"><span>Mejor Precio Vodafone</span></span>
             </div>
             <div class="vf-ticket ws10-o-layout__item ws10-u--1/3@desktop ws10-u--2/5@tablet" data-js-vf="_ticket">
@@ -24,11 +24,11 @@
                                                 Datos y minutos ilimitados
                                             </p>
                                             <p class="ws10-c-card-rate__product-txt ws10-c-card-rate__product-txt--primary">
-                                                Velocidad media
+                                                Velocidad alta
                                                 <svg class="ws10-c-card-rate__product-txt-icon"
                                                         xmlns="http://www.w3.org/2000/svg"
                                                         xmlns:xlink="http://www.w3.org/1999/xlink">
-                                                    <use xlink:href="#icon-thunder-1grey"></use>
+                                                    <use xlink:href="#icon-thunder-2grey"></use>
                                                 </svg>
                                             </p>
                                         </div>
@@ -41,10 +41,10 @@
                                         </svg>
                                         <div class="ws10-c-card-rate__product">
                                             <p class="ws10-c-card-rate__product-title">
-                                                Datos y min. ilimitados
+                                                Datos y minutos ilimitados GRATIS
                                             </p>
                                             <p class="ws10-c-card-rate__product-txt">
-                                                línea con -10€/mes dto. durante 1 año
+                                                Segunda línea GRATIS 1 año
                                             </p>
                                         </div>
                                     </li>
@@ -56,7 +56,7 @@
                                         </svg>
                                         <div class="ws10-c-card-rate__product">
                                             <p class="ws10-c-card-rate__product-title">
-                                                600Mbps Fibra
+                                                600Mbps Fibra Óptica
                                             </p>
                                             <p class="ws10-c-card-rate__product-txt">
                                                 + llamadas ilimitadas en fijo
@@ -74,7 +74,7 @@
                                                 Permanencia 1 año
                                             </p>
                                             <p class="ws10-c-card-rate__dto ws10-c-card-rate__dto--price">
-                                                <del>81,49€/mes</del>
+                                                <del>79,49€/mes</del>
                                             </p>
                                             <p class="ws10-c-card-rate__price ws10-u-color--black">
                                                 46,49€<sub>/mes</sub>
