--- a/oferta/masmovil/tarifa-2/resources/templates/partials/notSurprises.hbs
+++ b/oferta/masmovil/tarifa-2/resources/templates/partials/notSurprises.hbs
@@ -6,25 +6,39 @@
     <span><strong>No escondemos nada</strong></span>
   </p>
   <p>Impuestos y cuota de línea incluidos.</p>
-  <p>Permanencia 1 año</p>
+  <p><strong>Permanencia 1 año</strong></p>
   <p class="ws10-u--mb0">¿Cúanto voy a pagar?</p>
-  <p><strong>Paquete Móvil + Fibra: 46,49€/mes durante 1 año, después
-      81,49€/mes.</strong></p>
+  <p><strong>Paquete Fibra + Móvil: 46,49€/mes durante 1 año, después
+      79,49€/mes.</strong></p>
   <p class="ws10-u--mb0">Promociones:</p>
-  <p>Línea adicional: -10€/mes dto. Durante 1 año, después 16,50€/mes.</p>
-  <p>La instalación del servicio de fibra, salvo que sea autoinstalable, tiene
+  <p class="ws10-u--mb0">Llévate el paquete de Fibra + Móvil al 40% dto. durante 1 año</p>
+  <p>Línea adicional: GRATIS durante 1 año, después con un 50% dto. por solo 17,50€/mes (dto. ya aplicado)</p>
+  <p class="ws10-u--mt2x" >La instalación del servicio de fibra, salvo que sea autoinstalable, tiene
     un coste para el cliente de 150 euros. Vodafone renuncia al cobro de este
     coste si el cliente se mantiene activo en el servicio durante, al menos, 1
     año desde la fecha de instalación.</p>
-  <p>
-    ⚠️ El precio indicado en esta oferta incrementará +3€/mes en la línea móvil
-    principal y +1,5€/mes en las líneas adicionales a partir del próximo 15/7
-  </p>
   <a
-    class="vfes-link vfms-link vfes-link--red-chevron"
+    class="ws10-c-link-chevron ws10-c-link-chevron--primary"
     target="_blank"
     href="https://www.vodafone.es/c/particulares/es/productos-y-servicios/vodafone-one/legales/alt/mm1/"
     title="Ver condiciones legales"
-  >Ver condiciones legales</a>
+  >Ver condiciones legales
+  
+   <span class="ws10-u--hidden-visually"> color #E60000</span>
+      <svg
+        class="ws10-c-link-chevron__icon"
+        xmlns="http://www.w3.org/2000/svg"
+        xmlns:xlink="http://www.w3.org/1999/xlink"
+        width="24px"
+        height="24px"
+      >
+        <title>Flecha derecha</title>
+        <use class="icon-v3" xlink:href="#icon-chevron-right"></use>
+      </svg>
+  </a>
+
+
+
+
 
 </section>
