--- a/oferta/masmovil/tarifa-2/resources/templates/partials/secondLine.hbs
+++ b/oferta/masmovil/tarifa-2/resources/templates/partials/secondLine.hbs
@@ -1,5 +1,5 @@
 <section class="vf-mobile ws10-u--pt12x" data-js-vf="_secondLine2">
-    <p class="ws10-u-heading--3"><strong>Llévate la 2ª línea con -10€/mes de dto. durante 1 año</strong></p>
+    <p class="ws10-u-heading--3"><strong>Llévate la 2ª línea GRATIS 1 año</strong></p>
     <div class="ws10-flex ws10-flex__wrap">
         <div class="ws10-c-product-detail ws10-u--mt2x ws10-u--mb2x ws10-u--pr3x ws10-u--1/2@desktop">
             <svg class="ws10-c-product-detail__icon" xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='24px' height='24px'>
@@ -9,22 +9,30 @@
 
             <p class="ws10-c-product-detail__text">Datos ilimitados <strong>a media velocidad (2Mbps de bajada y de subida).</strong></p>
         </div>
+
         <div class="ws10-c-product-detail ws10-u--mt2x ws10-u--mb2x ws10-u--pr3x ws10-u--1/2@desktop">
+            <svg class="ws10-c-product-detail__icon" xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='24px' height='24px'>
+                <title>Icono Chat</title>
+                <use class="icon-v3" xlink:href="#icon-chat-mid"></use>
+            </svg>
+            <p class="ws10-c-product-detail__text">Consulta tus redes sociales y usa aplicaciones de mensajería instantánea.</p>
+        </div>
+        <div class="ws10-c-product-detail ws10-u--mt2x ws10-u--mb2x ws10-u--pr3x ws10-u--1/2@desktop">
+            <svg class="ws10-c-product-detail__icon" xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='24px' height='24px'>
+                <title>Icono Play</title>
+                <use class="icon-v3" xlink:href="#icon-play-mid"></use>
+            </svg>
+            <p class="ws10-c-product-detail__text"> Disfruta de streaming sin necesidad de conectarte al WiFi, tú y tus datos.</p>
+        </div>
+                <div class="ws10-c-product-detail ws10-u--mt2x ws10-u--mb2x ws10-u--pr3x ws10-u--1/2@desktop">
             <svg class="ws10-c-product-detail__icon" xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='24px' height='24px'>
                 <title>Icono llamadas</title>
                 <use class="icon-v3" xlink:href="#icon-unified-communication-mid"></use>
             </svg>
             <p class="ws10-c-product-detail__text"><strong>Llamadas y SMS ilimitados</strong> con cualquier operador nacional 24 horas, establecimiento de llamada incluido</p>
         </div>
-        <div class="ws10-c-product-detail ws10-u--mt2x ws10-u--mb2x ws10-u--pr3x ws10-u--1/2@desktop">
-            <svg class="ws10-c-product-detail__icon" xmlns='http://www.w3.org/2000/svg'
-                    xmlns:xlink='http://www.w3.org/1999/xlink' width='24px' height='24px'>
-                <title>Icono Chat</title>
-                <use class="icon-v3" xlink:href="#icon-chat-mid"></use>
-            </svg>
-            <p class="ws10-c-product-detail__text"><strong>Chatea y usa tus redes sociales</strong> con
-                la conexión 5G.</p>
-        </div>
+        <p class="ws10-u--pt4x wfms__legal">(*) Podrás añadir más Líneas adicionales en el proceso de compra
+  </p>
     </div>
 
 </section>
