arreglo titulo ticket

--- a/oferta/masmovil/tarifa-2/resources/templates/partials/banner.hbs
+++ b/oferta/masmovil/tarifa-2/resources/templates/partials/banner.hbs
@@ -6,6 +6,9 @@
                 <h2 class="ws10-u--pt5x ws10-u--3/4@desktop">Fibra y dos líneas datos<br> para ser ilimitable</h2>
                 <span class="ws10-u-color--primary ws10-flex ws10-flex__align-items--center"><img class="ws10-u--pr1x" alt="icono mejor precio Vodafone" src="img/banner/icono-bestprice.svg"><span>Mejor Precio Vodafone</span></span>
             </div>
+            <h2 class="ws10-u-heading--5 ws10-u-heading--5-lt ws10-u--mb0 vf-ticket ws10-o-layout__item ws10-u--1/3@desktop ws10-u--2/5@tablet ws10-u--pt3x">
+            Vodafone One ilimitada Avanzada 600Mbps
+          </h2>
             <div class="vf-ticket ws10-o-layout__item ws10-u--1/3@desktop ws10-u--2/5@tablet" data-js-vf="_ticket">
                 <div class="vf-ticket__floating">
                     <section class="ws10-c-card ws10-c-card-rate ws10-u--pt5x" data-ws10-js="card-rate">
