WIP tarifa 1 euskaltel

--- a/oferta/euskaltel/tarifa-1/resources/templates/partials/movil.hbs
+++ b/oferta/euskaltel/tarifa-1/resources/templates/partials/movil.hbs
@@ -16,7 +16,7 @@
                 <title>Icono Rayos</title>
                 <use class="icon-v3" xlink:href="#icon-thunder-1grey"></use>
             </svg>
-            <p class="ws10-c-product-detail__text">Datos ilimitados a <strong>alta velocidad (2Mbps de bajada y de subida).</strong></p>
+            <p class="ws10-c-product-detail__text">Datos ilimitados <strong>a alta velocidad (2Mbps de bajada y de subida).</strong></p>
         </div>
         <div class="ws10-c-product-detail ws10-u--mt2x ws10-u--mb2x ws10-u--pr3x ws10-u--1/2@desktop">
             <svg class="ws10-c-product-detail__icon" xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='24px' height='24px'>
