--- a/oferta/euskaltel/tarifa-1/resources/templates/partials/banner.hbs
+++ b/oferta/euskaltel/tarifa-1/resources/templates/partials/banner.hbs
@@ -6,6 +6,9 @@
                 <h2 class="ws10-u--pt5x ws10-u-heading--2-lt ws10-u--3/4@desktop"><strong>Fibra y datos para ser ilimitable</strong></h2>
                 <span class="ws10-u-color--primary ws10-flex ws10-flex__align-items--center"><img class="ws10-u--pr1x" alt="icono mejor precio Vodafone" src="img/banner/icono-bestprice.svg"><span>Mejor Precio Vodafone</span></span>
             </div>
+            <h2 class="ws10-u-heading--5 ws10-u-heading--5-lt ws10-u--mb0 vf-ticket ws10-o-layout__item ws10-u--1/3@desktop ws10-u--2/5@tablet ws10-u--pt3x">
+            Vodafone One ilimitada Avanzada 300Mbps
+          </h2>
             <div class="vf-ticket ws10-o-layout__item ws10-u--1/3@desktop ws10-u--2/5@tablet" data-js-vf="_ticket">
                 <div class="vf-ticket__floating">
                     <section class="ws10-c-card ws10-c-card-rate ws10-u--pt5x" data-ws10-js="card-rate">
@@ -24,11 +27,11 @@
                                                 Datos y minutos ilimitados
                                             </p>
                                             <p class="ws10-c-card-rate__product-txt ws10-c-card-rate__product-txt--primary">
-                                                Velocidad media
+                                                Velocidad alta
                                                 <svg class="ws10-c-card-rate__product-txt-icon"
                                                         xmlns="http://www.w3.org/2000/svg"
                                                         xmlns:xlink="http://www.w3.org/1999/xlink">
-                                                    <use xlink:href="#icon-thunder-1grey"></use>
+                                                    <use xlink:href="#icon-thunder-2grey"></use>
                                                 </svg>
                                             </p>
                                         </div>
@@ -41,7 +44,7 @@
                                         </svg>
                                         <div class="ws10-c-card-rate__product">
                                             <p class="ws10-c-card-rate__product-title">
-                                                300Mbps Fibra
+                                               300Mbps Fibra Óptica
                                             </p>
                                             <p class="ws10-c-card-rate__product-txt">
                                                 + llamadas ilimitadas en fijo
@@ -59,10 +62,10 @@
                                                 Permanencia 1 año
                                             </p>
                                             <p class="ws10-c-card-rate__dto ws10-c-card-rate__dto--price">
-                                                <del>54,99€/mes</del>
+                                                <del>56,99€/mes</del>
                                             </p>
                                             <p class="ws10-c-card-rate__price ws10-u-color--black">
-                                                37,99€<sub>/mes</sub>
+                                                39,49€<sub>/mes</sub>
                                             </p>
                                         </div>
                                     </div>
