--- a/oferta/euskaltel/tarifa-1/resources/templates/partials/notSurprises.hbs
+++ b/oferta/euskaltel/tarifa-1/resources/templates/partials/notSurprises.hbs
@@ -4,11 +4,12 @@
         <span><strong>No escondemos nada</strong></span>
     </p>
     <p>Impuestos y cuota de línea incluidos.</p>
-    <p>Permanencia 1 año</p>
+    <p><strong>Permanencia 1 año</strong></p>
     <p class="ws10-u--mb0">¿Cúanto voy a pagar?</p>
-    <p><strong>Paquete Móvil + Fibra: 37,99€/mes durante 1 año, después 54,99€/mes.</strong></p>
-    <p>La instalación del servicio de fibra, salvo que sea autoinstalable, tiene un coste para el cliente de 150 euros. Vodafone renuncia al cobro de este coste si el cliente se mantiene activo en el servicio durante, al menos, 1 año desde la fecha de instalación.</p>
-    <p>⚠️	El precio indicado en esta oferta incrementará +3€/mes en la línea móvil principal y +1,5€/mes en las líneas adicionales a partir del próximo 15/7</p>    
+    <p><strong>Paquete Móvil + Fibra: 39,49€/mes durante 1 año, después 56,99€/mes.</strong></p>
+    <p class="ws10-u--mb0">Promociones:</p>
+    <p>Llévate el paquete de Fibra + Móvil al 30% dto. durante 1 año.</p>
+    <p>La instalación del servicio de fibra, salvo que sea autoinstalable, tiene un coste para el cliente de 150 euros. Vodafone renuncia al cobro de este coste si el cliente se mantiene activo en el servicio durante, al menos, 1 año desde la fecha de instalación.</p>  
     <a class="vfes-link vfms-link vfes-link--red-chevron" target="_blank" href="https://www.vodafone.es/c/particulares/es/productos-y-servicios/vodafone-one/legales/alt/e1/" title="Ver condiciones legales">Ver condiciones legales</a>
 
 </section>
