Destiny - Norte Fixes

--- a/destiny4.0/Norte/ilimitada_avanzada_600/resources/styles/_micro.scss
+++ b/destiny4.0/Norte/ilimitada_avanzada_600/resources/styles/_micro.scss
@@ -122,6 +122,7 @@
     @media screen and (min-width: 970px) {
       background-image: url("../img/banner/bg-banner-desktop.jpg");
       background-attachment: fixed;
+      background-size: cover;
       background-position-y: -150px;
     }
     &__textcontainer {
