--- a/destiny4.0/Norte/ilimitada_plus_600/resources/templates/partials/sinsorpresas.hbs
+++ b/destiny4.0/Norte/ilimitada_plus_600/resources/templates/partials/sinsorpresas.hbs
@@ -17,7 +17,7 @@
      {{{sinSorpresas.promociones2}}}
   </p>
   <!----PRICE-TAB-->
-<div class="ws10-c-price-bar-group ws10-u--mt4x ws10-u--mb4x">
+<div class="ws10-c-price-bar-group ws10-u--mt4x ws10-u--mb4x ws10-u--1/1">
     <div class="ws10-c-price-bar">
       <span
         class="ws10-c-price-bar__text ws10-u--mb4x"
@@ -69,7 +69,7 @@
         {{ sinSorpresas.bar.[1].bar2}}
       </span>
       <span
-        class="ws10-c-price-bar__hr ws10-c-price-bar__hr--none ws10-c-price-bar__hr--separator-end ws10-c-price-bar__hr--bg-turquoise"
+        class="ws10-c-price-bar__hr ws10-c-price-bar__hr--none ws10-c-price-bar__hr--separator-end ws10-c-price-bar__hr--bg-lemon-yellow"
       ></span>
       <div
         class="ws10-c-price ws10-c-price--x-small ws10-c-price--default@tablet ws10-c-price--default@desktop"
@@ -78,16 +78,6 @@
         <span class="ws10-c-price__currency">€</span>
         <sub class="ws10-c-price__recurrence">/mes</sub>
       </div>
-    </div>
-    <div class="ws10-c-price-bar">
-      <span
-        class="ws10-c-price-bar__text ws10-u--mb4x"
-        data-js-vf="_portability"
-        >  {{ sinSorpresas.bar.[0].bar3}}</span>
-      <span
-        class="ws10-c-price-bar__text ws10-u--mb4x ws10-u--hidden"
-        data-js-vf="_newNumber"
-        >  {{ sinSorpresas.bar.[1].bar3}}</span>
     </div>
   </div>
 
