pelenaca: radio fuera colectivos plus x2

--- a/destiny4.0/colectivos/ilimitada_plus_600/resources/templates/partials/cardRate.hbs
+++ b/destiny4.0/colectivos/ilimitada_plus_600/resources/templates/partials/cardRate.hbs
@@ -33,34 +33,36 @@
                     </ul>
 
                     <form action="" method="get" class="vf-form ws10-c-card-rate__form ws10-c-form" data-js-vf="_showOrHideSticky">
-                        <fieldset>
-                            <legend class="ws10-c-card-rate__form-title">
-                                {{ form.title }}
-                            </legend>
-                            <div class="ws10-c-card-rate__w-form-select">
-                                <div class="vf-form__box ws10-c-form__box">
-                                    <input type="radio" name="rate-1-card-rate" id="rate-1-card-rate-option-1" class="ws10-c-form__radio"
-                                        data-analytics-element="{{ form.inputs.0.element }}"
-                                        data-analytics-context="{{ form.inputs.0.context }}"
-                                        data-analytics-category="{{ form.inputs.0.category }}"
-                                        checked/>
-                                    <label for="rate-1-card-rate-option-1" class="ws10-c-card-rate__form-label ws10-c-form__label" data-js-vf="_buttonTypeLine"
-                                        data-js-vf-value="portability">
-                                        {{ form.inputs.0.label }}
-                                    </label>
+                        {{#if form}}
+                            <fieldset>
+                                <legend class="ws10-c-card-rate__form-title">
+                                    {{ form.title }}
+                                </legend>
+                                <div class="ws10-c-card-rate__w-form-select">
+                                    <div class="vf-form__box ws10-c-form__box">
+                                        <input type="radio" name="rate-1-card-rate" id="rate-1-card-rate-option-1" class="ws10-c-form__radio"
+                                            data-analytics-element="{{ form.inputs.0.element }}"
+                                            data-analytics-context="{{ form.inputs.0.context }}"
+                                            data-analytics-category="{{ form.inputs.0.category }}"
+                                            checked/>
+                                        <label for="rate-1-card-rate-option-1" class="ws10-c-card-rate__form-label ws10-c-form__label" data-js-vf="_buttonTypeLine"
+                                            data-js-vf-value="portability">
+                                            {{ form.inputs.0.label }}
+                                        </label>
+                                    </div>
+                                    <div class="vf-form__box ws10-c-form__box">
+                                        <input type="radio" name="rate-1-card-rate" id="rate-1-card-rate-option-2" class="ws10-c-form__radio"
+                                            data-analytics-element="{{ form.inputs.1.element }}"
+                                            data-analytics-context="{{ form.inputs.1.context }}"
+                                            data-analytics-category="{{ form.inputs.1.category }}" />
+                                        <label for="rate-1-card-rate-option-2" class="ws10-c-card-rate__form-label ws10-c-form__label" data-js-vf="_buttonTypeLine"
+                                            data-js-vf-value="newNumber">
+                                            {{ form.inputs.1.label }}
+                                        </label>
+                                    </div>
                                 </div>
-                                <div class="vf-form__box ws10-c-form__box">
-                                    <input type="radio" name="rate-1-card-rate" id="rate-1-card-rate-option-2" class="ws10-c-form__radio"
-                                        data-analytics-element="{{ form.inputs.1.element }}"
-                                        data-analytics-context="{{ form.inputs.1.context }}"
-                                        data-analytics-category="{{ form.inputs.1.category }}" />
-                                    <label for="rate-1-card-rate-option-2" class="ws10-c-card-rate__form-label ws10-c-form__label" data-js-vf="_buttonTypeLine"
-                                        data-js-vf-value="newNumber">
-                                        {{ form.inputs.1.label }}
-                                    </label>
-                                </div>
-                            </div>
-                        </fieldset>
+                            </fieldset>
+                          {{/if}}
                         {{#each rates }}
                             <div class="{{ hidden }}" data-js-vf="{{ js-vf }}">
                                 <p class="ws10-c-card-rate__dto ws10-c-card-rate__dto--percent">
