pelenaca: pdp3 Jumanji ok

--- a/jumanji/ilimitada-avanza-plus-300/resources/templates/partials/sinsorpresas.hbs
+++ b/jumanji/ilimitada-avanza-plus-300/resources/templates/partials/sinsorpresas.hbs
@@ -7,13 +7,13 @@
   </p>
   <p>Impuestos y cuota de línea incluidos.</p>
   <p><strong>{{ permanencia }}</strong></p>
-  <p>¿Cuánto voy a pagar?</p>
+  <p class="ws10-u--mb1x">¿Cuánto voy a pagar?</p>
   <p><strong>{{ fibra-movil }} (61,49€/mes) + decodificador (3€/mes): {{ price.[0].precio_conpromo }}€/mes durante 1 año, después {{ price.[0].precio_sinpromo }}€/mes.</strong></p>
   <p class="ws10-flex ws10-flex__direction--column">
     <span>Promociones:</span>
     <span data-js-vf="_portability">Línea adicional: GRATIS durante 1 año,
       después con un 50% dto. por solo 17,50€/mes (dto. ya aplicado).</span>
-    <span>Paquete de TV: GRATIS</span>
+    <span>Paquete de TV: GRATIS durante 1 año, después 10€/mes</span>
   </p>
 
   <!----PRICE-TAB-->
